Bug 669904 - Add nsAttrValue size to the DOM Memory Reporter. f=bz r=jst